fixed spacing on homepage menu

--- a/assets/css/stylesheet.less
+++ b/assets/css/stylesheet.less
@@ -263,7 +263,7 @@ p:not(:last-of-type){
 	font-weight: 700;
 	font-style: normal;
 	font-size: 4em;
-	letter-spacing: -3px;
+	letter-spacing: -4px;
 	margin-bottom: 30px;
 	position: relative;
 	opacity: 1;
@@ -298,7 +298,7 @@ p:not(:last-of-type){
 	font-weight: 700;
 	font-style: normal;
 	font-size: 5em;
-	letter-spacing: -3px;
+	letter-spacing: -4px;
 	line-height: 63px;
 }
 /***** HOVER *****/
